// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/panel-android/components/content/OverviewTab.jsx Snapshot tests with react-test-renderer OverviewTab component with falsy props and SiteNotScanned 1`] = `
<div
  className="OverviewTab"
>
  <div
    className="OverviewTab__NotScannedContainer"
  >
    <div
      className="sub-component not-scanned small"
    >
      <div
        className="not-scanned-header"
      >
        summary_page_not_scanned
      </div>
      <div
        className="not-scanned-text"
      >
        summary_description_not_scanned_1
      </div>
      <div
        className="not-scanned-text"
      >
        summary_description_not_scanned_2
      </div>
    </div>
  </div>
  <ui-onboarding-state
    class="OverviewTab__onboardingState"
  >
    <div
      className="OverviewTab__GhosteryFeaturesContainer"
    >
      <div
        className="flex-container flex-dir-column align-middle"
      >
        <div>
          <div
            className="button g-tooltip GhosteryFeatureButton GhosteryFeatureButton--short GhosteryFeatureButton--inactive trust not-clickable"
            onClick={[Function]}
          >
            <span
              className="flex-container align-center-middle full-height"
            >
              <span
                className="GhosteryFeatureButton__text"
              >
                summary_trust_site
              </span>
            </span>
          </div>
        </div>
        <div
          className="OverviewTab__GhosteryFeature--ExtraMargins"
        >
          <div
            className="button g-tooltip GhosteryFeatureButton GhosteryFeatureButton--short GhosteryFeatureButton--inactive restrict not-clickable"
            onClick={[Function]}
          >
            <span
              className="flex-container align-center-middle full-height"
            >
              <span
                className="GhosteryFeatureButton__text"
              >
                summary_restrict_site
              </span>
            </span>
          </div>
        </div>
        <div>
          <div
            className="sub-component pause-button"
          >
            <div
              className="button-group"
            >
              <div
                className="button-left button-pause g-tooltip button"
                onClick={[Function]}
              >
                <span
                  className="flex-container align-center-middle full-height"
                >
                  <span
                    className="pause-button-text"
                  >
                    summary_pause_ghostery
                  </span>
                </span>
              </div>
              <div
                className="button-right button-caret button"
                onClick={[Function]}
              >
                <span
                  className="show-for-sr"
                >
                  summary_show_menu
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="OverviewTab__CommonFeaturesContainer"
    >
      <div>
        <div
          className="OverviewTab__CommonFeature"
        >
          <div
            className="CommonFeature CommonFeature--smaller CommonFeature--inactive not-clickable"
            onClick={[Function]}
          >
            <div
              className="CommonFeature__status"
            >
              off
            </div>
            <div
              className="CommonFeature__icon CommonFeature__icon--anti-track g-tooltip"
            />
            <div
              className="CommonFeature__feature-name"
            >
              enhanced_anti_tracking
            </div>
          </div>
        </div>
        <div
          className="OverviewTab__CommonFeature"
        >
          <div
            className="CommonFeature CommonFeature--smaller CommonFeature--inactive not-clickable"
            onClick={[Function]}
          >
            <div
              className="CommonFeature__status"
            >
              off
            </div>
            <div
              className="CommonFeature__icon CommonFeature__icon--ad-block g-tooltip"
            />
            <div
              className="CommonFeature__feature-name"
            >
              enhanced_ad_blocking
            </div>
          </div>
        </div>
        <div
          className="OverviewTab__CommonFeature"
        >
          <div
            className="CommonFeature CommonFeature--smaller CommonFeature--inactive not-clickable"
            onClick={[Function]}
          >
            <div
              className="CommonFeature__status"
            >
              off
            </div>
            <div
              className="CommonFeature__icon CommonFeature__icon--autoconsent g-tooltip"
            />
            <div
              className="CommonFeature__feature-name"
            >
              enhanced_autoconsent
            </div>
          </div>
        </div>
      </div>
    </div>
  </ui-onboarding-state>
</div>
`;

exports[`app/panel-android/components/content/OverviewTab.jsx Snapshot tests with react-test-renderer OverviewTab component with truthy props and no SiteNotScanned 1`] = `
<div
  className="OverviewTab"
>
  <div>
    <div
      className="OverviewTab__DonutGraphContainer"
    >
      <div
        className="DonutGraph DonutGraph--big"
      >
        <div
          className="DonutGraph__tooltipContainer"
        />
        <div
          className="DonutGraph__ref"
        />
        <div
          className="DonutGraph__textCountContainer clickable"
          onClick={[Function]}
        >
          <div
            className="DonutGraph__textCount g-tooltip"
          >
            29
          </div>
        </div>
      </div>
    </div>
    <div
      className="OverviewTab__PageHostContainer"
    >
      <span
        className="OverviewTab__PageHostText invisible"
      >
        page_host
      </span>
    </div>
    <div
      className="OverviewTab__PageStatsContainer"
    >
      <div
        className="OverviewTab__PageStat"
      >
        <span>
          trackers_blocked
           
        </span>
        <span
          className="OverviewTab__PageStat--red"
        >
          0
        </span>
      </div>
      <div
        className="OverviewTab__PageStat"
      >
        <span>
          requests_modified
           
        </span>
        <span
          className="OverviewTab__PageStat--blue"
        >
          21
        </span>
      </div>
    </div>
  </div>
  <ui-onboarding-state
    class="OverviewTab__onboardingState"
  >
    <div
      className="OverviewTab__GhosteryFeaturesContainer"
    >
      <div
        className="flex-container flex-dir-column align-middle"
      >
        <div>
          <div
            className="button g-tooltip GhosteryFeatureButton GhosteryFeatureButton--short GhosteryFeatureButton--inactive trust not-clickable"
            onClick={[Function]}
          >
            <span
              className="flex-container align-center-middle full-height"
            >
              <span
                className="GhosteryFeatureButton__text"
              >
                summary_trust_site
              </span>
            </span>
          </div>
        </div>
        <div
          className="OverviewTab__GhosteryFeature--ExtraMargins"
        >
          <div
            className="button g-tooltip GhosteryFeatureButton GhosteryFeatureButton--short GhosteryFeatureButton--inactive restrict not-clickable"
            onClick={[Function]}
          >
            <span
              className="flex-container align-center-middle full-height"
            >
              <span
                className="GhosteryFeatureButton__text"
              >
                summary_restrict_site
              </span>
            </span>
          </div>
        </div>
        <div>
          <div
            className="sub-component pause-button"
          >
            <div
              className="button-group"
            >
              <div
                className="button-left button-pause g-tooltip button active"
                onClick={[Function]}
              >
                <span
                  className="flex-container align-center-middle full-height"
                >
                  <span
                    className="pause-button-text"
                  >
                    summary_resume_ghostery
                  </span>
                </span>
              </div>
              <div
                className="button-right button-caret button"
                onClick={[Function]}
              >
                <span
                  className="show-for-sr"
                >
                  summary_show_menu
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="OverviewTab__CommonFeaturesContainer"
    >
      <div>
        <div
          className="OverviewTab__CommonFeature"
        >
          <div
            className="CommonFeature CommonFeature--smaller CommonFeature--active not-clickable"
            onClick={[Function]}
          >
            <div
              className="CommonFeature__status"
            >
              on
            </div>
            <div
              className="CommonFeature__icon CommonFeature__icon--anti-track g-tooltip"
            />
            <div
              className="CommonFeature__feature-name"
            >
              enhanced_anti_tracking
            </div>
          </div>
        </div>
        <div
          className="OverviewTab__CommonFeature"
        >
          <div
            className="CommonFeature CommonFeature--smaller CommonFeature--active not-clickable"
            onClick={[Function]}
          >
            <div
              className="CommonFeature__status"
            >
              on
            </div>
            <div
              className="CommonFeature__icon CommonFeature__icon--ad-block g-tooltip"
            />
            <div
              className="CommonFeature__feature-name"
            >
              enhanced_ad_blocking
            </div>
          </div>
        </div>
        <div
          className="OverviewTab__CommonFeature"
        >
          <div
            className="CommonFeature CommonFeature--smaller CommonFeature--active not-clickable"
            onClick={[Function]}
          >
            <div
              className="CommonFeature__status"
            >
              on
            </div>
            <div
              className="CommonFeature__icon CommonFeature__icon--autoconsent g-tooltip"
            />
            <div
              className="CommonFeature__feature-name"
            >
              enhanced_autoconsent
            </div>
          </div>
        </div>
      </div>
    </div>
  </ui-onboarding-state>
</div>
`;
